--- a/custom_manifests/manifests/oci-csi.yml
+++ b/custom_manifests/manifests/oci-csi.yml
@@ -271,6 +271,8 @@ spec:
         app: csi-oci-node
         role: csi-oci
     spec:
+      nodeSelector:
+        node-role.kubernetes.io/worker: ""
       containers:
         - name: oci-csi-node-driver
           args:
