--- a/custom_manifests/manifests/oci-csi.yml
+++ b/custom_manifests/manifests/oci-csi.yml
@@ -123,7 +123,7 @@ spec:
             - --fss-csi-endpoint=unix://var/run/shared-tmpfs/csi-fss.sock
           command:
             - /usr/local/bin/oci-csi-controller-driver
-          image: ghcr.io/oracle/cloud-provider-oci:v1.25.0
+          image: phx.ocir.io/axkcy3juscqn/openshift-ccm-csi:beta-v1
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - name: config
@@ -291,7 +291,7 @@ spec:
                   fieldPath: spec.nodeName
             - name: PATH
               value: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/host/usr/bin:/host/sbin
-          image: ghcr.io/oracle/cloud-provider-oci:v1.25.0
+          image: phx.ocir.io/axkcy3juscqn/openshift-ccm-csi:beta-v1
           securityContext:
             privileged: true
           volumeMounts:
