--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -1,5 +1,6 @@
 name: Infrastructure Smoke Test
 on:
+  push:
   schedule:
     - cron: "20 5 */2 * *"
 jobs:
@@ -16,8 +17,8 @@ jobs:
       COMPARTMENT_OCID: ${{ secrets.COMPARTMENT_OCID }}
       ZONE_DNS_SUFFIX: ${{ secrets.ZONE_DNS_SUFFIX }}
       CLUSTER_NAME: smoke-test-vm
-    outputs:
-      stack_id: ${{ steps.output-stack-id.outputs.stack_id }}
+    # outputs:
+    #   stack_id: ${{ steps.output-stack-id.outputs.stack_id }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -43,12 +44,12 @@ jobs:
           command: 'resource-manager stack create --compartment-id ${{ env.COMPARTMENT_OCID }} --display-name ${{ github.job }}-${{ env.NOW }} --config-source infrastructure.zip --variables "{\"compartment_ocid\": \"${{ env.COMPARTMENT_OCID }}\", \"cluster_name\": \"${{ env.CLUSTER_NAME }}-${{ env.NOW }}\", \"openshift_image_source_uri\": \"${{ env.OPENSHIFT_IMAGE_SOURCE_URI }}\", \"region\": \"${{ env.OCI_CLI_REGION }}\", \"tenancy_ocid\": \"${{ env.OCI_CLI_TENANCY }}\", \"zone_dns\": \"${{ env.CLUSTER_NAME }}-${{ env.NOW }}${{ env.ZONE_DNS_SUFFIX }}\"}"'
           query: 'data.id'
 
-      - name: Output Stack ID
-        id: output-stack-id
-        env:
-          stack_id: ${{ steps.create-stack.outputs.raw_output }}
-        run: |
-          echo "stack_id=$(echo $stack_id | tr -d '"')" >> $GITHUB_OUTPUT
+      # - name: Output Stack ID
+      #   id: output-stack-id
+      #   env:
+      #     stack_id: ${{ steps.create-stack.outputs.raw_output }}
+      #   run: |
+      #     echo "stack_id=$(echo $stack_id | tr -d '"')" >> $GITHUB_OUTPUT
 
       - name: RMS Stack Plan Job
         uses: oracle-actions/run-oci-cli-command@v1.3.1
@@ -61,8 +62,22 @@ jobs:
         id: stack-apply-job
         with:
           command: 'resource-manager job create-apply-job --wait-for-state SUCCEEDED --max-wait-seconds 1800 --execution-plan-strategy AUTO_APPROVED --stack-id ${{ steps.create-stack.outputs.raw_output }}'
+      
+      - name: Teardown VM Infrastructure
+        uses: oracle-actions/run-oci-cli-command@v1.3.1
+        id: teardown-vm-infra
+        with:
+          command: 'resource-manager job create-destroy-job --wait-for-state SUCCEEDED --max-wait-seconds 1800 --execution-plan-strategy AUTO_APPROVED --stack-id ${{ steps.create-stack.outputs.raw_output }}'
+
+      # - name: Destroy VM RMS Stack
+      #   uses: oracle-actions/run-oci-cli-command@v1.3.1
+      #   id: destroy-vm-stack
+      #   continue-on-error: true
+      #   with:
+      #     command: 'resource-manager stack delete --force --stack-id ${{ steps.create-stack.outputs.raw_output }}'
 
   smoke-test-bm:
+    needs: [smoke-test-vm]
     runs-on: ubuntu-latest
     name: Create BM cluster infrastructure
     env:
@@ -75,8 +90,8 @@ jobs:
       COMPARTMENT_OCID: ${{ secrets.COMPARTMENT_OCID }}
       ZONE_DNS_SUFFIX: ${{ secrets.ZONE_DNS_SUFFIX }}
       CLUSTER_NAME: smoke-test-bm
-    outputs:
-      stack_id: ${{ steps.output-stack-id.outputs.stack_id }}
+    # outputs:
+    #   stack_id: ${{ steps.output-stack-id.outputs.stack_id }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -102,12 +117,12 @@ jobs:
           command: 'resource-manager stack create --compartment-id ${{ env.COMPARTMENT_OCID }} --display-name ${{ github.job }}-${{ env.NOW }} --config-source infrastructure.zip --variables "{\"compartment_ocid\": \"${{ env.COMPARTMENT_OCID }}\", \"cluster_name\": \"${{ env.CLUSTER_NAME }}-${{ env.NOW }}\", \"control_plane_shape\": \"BM.Standard3.64\", \"control_plane_ocpu\": \"64\", \"control_plane_memory\": \"1024\", \"compute_shape\": \"BM.Standard3.64\", \"compute_ocpu\": \"64\", \"compute_memory\": \"1024\", \"openshift_image_source_uri\": \"${{ env.OPENSHIFT_IMAGE_SOURCE_URI }}\", \"region\": \"${{ env.OCI_CLI_REGION }}\", \"tenancy_ocid\": \"${{ env.OCI_CLI_TENANCY }}\", \"zone_dns\": \"${{ env.CLUSTER_NAME }}-${{ env.NOW }}${{ env.ZONE_DNS_SUFFIX }}\"}"'
           query: 'data.id'
 
-      - name: Output Stack ID
-        id: output-stack-id
-        env:
-          stack_id: ${{ steps.create-stack.outputs.raw_output }}
-        run: |
-          echo "stack_id=$(echo $stack_id | tr -d '"')" >> $GITHUB_OUTPUT
+      # - name: Output Stack ID
+      #   id: output-stack-id
+      #   env:
+      #     stack_id: ${{ steps.create-stack.outputs.raw_output }}
+      #   run: |
+      #     echo "stack_id=$(echo $stack_id | tr -d '"')" >> $GITHUB_OUTPUT
 
       - name: RMS Stack Plan Job
         uses: oracle-actions/run-oci-cli-command@v1.3.1
@@ -120,8 +135,22 @@ jobs:
         id: stack-apply-job
         with:
           command: 'resource-manager job create-apply-job --wait-for-state SUCCEEDED --max-wait-seconds 1800 --execution-plan-strategy AUTO_APPROVED --stack-id ${{ steps.create-stack.outputs.raw_output }}'
+      
+      - name: Teardown BM Infrastructure
+        uses: oracle-actions/run-oci-cli-command@v1.3.1
+        id: teardown-bm-infra
+        with:
+          command: 'resource-manager job create-destroy-job --wait-for-state SUCCEEDED --max-wait-seconds 1800 --execution-plan-strategy AUTO_APPROVED --stack-id ${{ steps.create-stack.outputs.raw_output }}'
+
+      # - name: Destroy BM RMS Stack
+      #   uses: oracle-actions/run-oci-cli-command@v1.3.1
+      #   id: destroy-bm-stack
+      #   continue-on-error: true
+      #   with:
+      #     command: 'resource-manager stack delete --force --stack-id ${{ steps.create-stack.outputs.raw_output }}'
 
   smoke-test-vm-multi-ad:
+    needs: [smoke-test-bm]
     runs-on: ubuntu-latest
     name: Create VM cluster infrastructure in multi-ad region
     env:
@@ -135,8 +164,8 @@ jobs:
       ZONE_DNS_SUFFIX: ${{ secrets.ZONE_DNS_SUFFIX }}
       CLUSTER_NAME: smoke-test-vm-multi-ad
       MUTLI_AD_REGION: eu-frankfurt-1
-    outputs:
-      stack_id: ${{ steps.output-stack-id.outputs.stack_id }}
+    # outputs:
+    #   stack_id: ${{ steps.output-stack-id.outputs.stack_id }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -162,12 +191,12 @@ jobs:
           command: 'resource-manager stack create --compartment-id ${{ env.COMPARTMENT_OCID }} --display-name ${{ github.job }}-${{ env.NOW }} --config-source infrastructure.zip --variables "{\"compartment_ocid\": \"${{ env.COMPARTMENT_OCID }}\", \"cluster_name\": \"${{ env.CLUSTER_NAME }}-${{ env.NOW }}\", \"openshift_image_source_uri\": \"${{ env.OPENSHIFT_IMAGE_SOURCE_URI }}\", \"region\": \"${{ env.MUTLI_AD_REGION }}\", \"tenancy_ocid\": \"${{ env.OCI_CLI_TENANCY }}\", \"zone_dns\": \"${{ env.CLUSTER_NAME }}-${{ env.NOW }}${{ env.ZONE_DNS_SUFFIX }}\"}"'
           query: 'data.id'
 
-      - name: Output Stack ID
-        id: output-stack-id
-        env:
-          stack_id: ${{ steps.create-stack.outputs.raw_output }}
-        run: |
-          echo "stack_id=$(echo $stack_id | tr -d '"')" >> $GITHUB_OUTPUT
+      # - name: Output Stack ID
+      #   id: output-stack-id
+      #   env:
+      #     stack_id: ${{ steps.create-stack.outputs.raw_output }}
+      #   run: |
+      #     echo "stack_id=$(echo $stack_id | tr -d '"')" >> $GITHUB_OUTPUT
 
       - name: RMS Stack Plan Job
         uses: oracle-actions/run-oci-cli-command@v1.3.1
@@ -181,59 +210,72 @@ jobs:
         with:
           command: 'resource-manager job create-apply-job --wait-for-state SUCCEEDED --max-wait-seconds 1800 --execution-plan-strategy AUTO_APPROVED --stack-id ${{ steps.create-stack.outputs.raw_output }}'
 
-  teardown-stacks:
-    if: ${{ !cancelled() }}
-    needs: [smoke-test-vm, smoke-test-bm, smoke-test-vm-multi-ad]
-    runs-on: ubuntu-latest
-    name: Teardown cluster infrastructure
-    env:
-      OCI_CLI_USER: ${{ secrets.OCI_CLI_USER }}
-      OCI_CLI_TENANCY: ${{ secrets.OCI_CLI_TENANCY }}
-      OCI_CLI_FINGERPRINT: ${{ secrets.OCI_CLI_FINGERPRINT }}
-      OCI_CLI_KEY_CONTENT: ${{ secrets.OCI_CLI_KEY_CONTENT }}
-      OCI_CLI_REGION: ${{ secrets.OCI_CLI_REGION }}
-    steps:
-      - name: Teardown VM Infrastructure
-        if: ${{ needs.smoke-test-vm.result == 'success' }}
-        uses: oracle-actions/run-oci-cli-command@v1.3.1
-        id: teardown-vm-infra
-        with:
-          command: 'resource-manager job create-destroy-job --wait-for-state SUCCEEDED --max-wait-seconds 1800 --execution-plan-strategy AUTO_APPROVED --stack-id ${{ needs.smoke-test-vm.outputs.stack_id }}'
-
-      - name: Teardown BM Infrastructure
-        if: ${{ needs.smoke-test-bm.result == 'success' }}
-        uses: oracle-actions/run-oci-cli-command@v1.3.1
-        id: teardown-bm-infra
-        with:
-          command: 'resource-manager job create-destroy-job --wait-for-state SUCCEEDED --max-wait-seconds 1800 --execution-plan-strategy AUTO_APPROVED --stack-id ${{ needs.smoke-test-bm.outputs.stack_id }}'
-
-      - name: Teardown VM multi-ad Infrastructure
-        if: ${{ needs.smoke-test-vm-multi-ad.result == 'success' }}
+      - name: Teardown VM Multi AD Infrastructure
         uses: oracle-actions/run-oci-cli-command@v1.3.1
         id: teardown-vm-multi-ad-infra
         with:
-          command: 'resource-manager job create-destroy-job --wait-for-state SUCCEEDED --max-wait-seconds 1800 --execution-plan-strategy AUTO_APPROVED --stack-id ${{ needs.smoke-test-vm-multi-ad.outputs.stack_id }}'
+          command: 'resource-manager job create-destroy-job --wait-for-state SUCCEEDED --max-wait-seconds 1800 --execution-plan-strategy AUTO_APPROVED --stack-id ${{ steps.create-stack.outputs.raw_output }}'
 
-      - name: Destroy VM RMS Stack
-        if: ${{ steps.teardown-vm-infra.outcome == 'success' }}
-        uses: oracle-actions/run-oci-cli-command@v1.3.1
-        id: destroy-vm-stack
-        continue-on-error: true
-        with:
-          command: 'resource-manager stack delete --force --stack-id ${{ needs.smoke-test-vm.outputs.stack_id }}'
+      # - name: Destroy VM Multi AD RMS Stack
+      #   uses: oracle-actions/run-oci-cli-command@v1.3.1
+      #   id: destroy-vm-multi-ad-stack
+      #   continue-on-error: true
+      #   with:
+      #     command: 'resource-manager stack delete --force --stack-id ${{ steps.create-stack.outputs.raw_output }}'
 
-      - name: Destroy BM RMS Stack
-        if: ${{ steps.teardown-bm-infra.outcome == 'success' }}
-        uses: oracle-actions/run-oci-cli-command@v1.3.1
-        id: destroy-bm-stack
-        continue-on-error: true
-        with:
-          command: 'resource-manager stack delete --force --stack-id ${{ needs.smoke-test-bm.outputs.stack_id }}'
+  # teardown-stacks:
+  #   if: ${{ !cancelled() }}
+  #   needs: [smoke-test-vm, smoke-test-bm, smoke-test-vm-multi-ad]
+    # runs-on: ubuntu-latest
+    # name: Teardown cluster infrastructure
+    # env:
+    #   OCI_CLI_USER: ${{ secrets.OCI_CLI_USER }}
+    #   OCI_CLI_TENANCY: ${{ secrets.OCI_CLI_TENANCY }}
+    #   OCI_CLI_FINGERPRINT: ${{ secrets.OCI_CLI_FINGERPRINT }}
+    #   OCI_CLI_KEY_CONTENT: ${{ secrets.OCI_CLI_KEY_CONTENT }}
+    #   OCI_CLI_REGION: ${{ secrets.OCI_CLI_REGION }}
+    # steps:
+    #   - name: Teardown VM Infrastructure
+    #     if: ${{ needs.smoke-test-vm.result == 'success' }}
+    #     uses: oracle-actions/run-oci-cli-command@v1.3.1
+    #     id: teardown-vm-infra
+    #     with:
+    #       command: 'resource-manager job create-destroy-job --wait-for-state SUCCEEDED --max-wait-seconds 1800 --execution-plan-strategy AUTO_APPROVED --stack-id ${{ needs.smoke-test-vm.outputs.stack_id }}'
 
-      - name: Destroy VM multi-ad RMS Stack
-        if: ${{ steps.teardown-vm-multi-ad-infra.outcome == 'success' }}
-        uses: oracle-actions/run-oci-cli-command@v1.3.1
-        id: destroy-vm-multi-ad-stack
-        continue-on-error: true
-        with:
-          command: 'resource-manager stack delete --force --stack-id ${{ needs.smoke-test-vm-multi-ad.outputs.stack_id }}'
+    #   - name: Teardown BM Infrastructure
+      #   if: ${{ needs.smoke-test-bm.result == 'success' }}
+      #   uses: oracle-actions/run-oci-cli-command@v1.3.1
+      #   id: teardown-bm-infra
+      #   with:
+      #     command: 'resource-manager job create-destroy-job --wait-for-state SUCCEEDED --max-wait-seconds 1800 --execution-plan-strategy AUTO_APPROVED --stack-id ${{ needs.smoke-test-bm.outputs.stack_id }}'
+
+      # - name: Teardown VM multi-ad Infrastructure
+      #   if: ${{ needs.smoke-test-vm-multi-ad.result == 'success' }}
+      #   uses: oracle-actions/run-oci-cli-command@v1.3.1
+      #   id: teardown-vm-multi-ad-infra
+      #   with:
+      #     command: 'resource-manager job create-destroy-job --wait-for-state SUCCEEDED --max-wait-seconds 1800 --execution-plan-strategy AUTO_APPROVED --stack-id ${{ needs.smoke-test-vm-multi-ad.outputs.stack_id }}'
+
+      # - name: Destroy VM RMS Stack
+      #   if: ${{ steps.teardown-vm-infra.outcome == 'success' }}
+      #   uses: oracle-actions/run-oci-cli-command@v1.3.1
+      #   id: destroy-vm-stack
+      #   continue-on-error: true
+      #   with:
+      #     command: 'resource-manager stack delete --force --stack-id ${{ needs.smoke-test-vm.outputs.stack_id }}'
+
+      # - name: Destroy BM RMS Stack
+      #   if: ${{ steps.teardown-bm-infra.outcome == 'success' }}
+      #   uses: oracle-actions/run-oci-cli-command@v1.3.1
+      #   id: destroy-bm-stack
+      #   continue-on-error: true
+      #   with:
+      #     command: 'resource-manager stack delete --force --stack-id ${{ needs.smoke-test-bm.outputs.stack_id }}'
+
+      # - name: Destroy VM multi-ad RMS Stack
+      #   if: ${{ steps.teardown-vm-multi-ad-infra.outcome == 'success' }}
+      #   uses: oracle-actions/run-oci-cli-command@v1.3.1
+      #   id: destroy-vm-multi-ad-stack
+      #   continue-on-error: true
+      #   with:
+      #     command: 'resource-manager stack delete --force --stack-id ${{ needs.smoke-test-vm-multi-ad.outputs.stack_id }}'
