fix: support using existing dns_zone
This change introduces a flag to use existing DNS Zone when it already
exists, preventing errors on terraform when the user specified an domain
in BaseDomain (Assisted Installer) which has been created, or is already
used by the company.

The script will follow the same flow, but reuse existing zone to
create cluster DNS records.

--- a/infrastructure/schema.yaml
+++ b/infrastructure/schema.yaml
@@ -40,6 +40,7 @@ variableGroups:
 - title: "Networking Configuration"
   variables:
     - enable_private_dns
+    - use_existing_zone
     - zone_dns
     - vcn_dns_label
     - vcn_cidr
@@ -207,6 +208,12 @@ variables:
     type: boolean
     title: Enable Private DNS
     description: If the switch is enabled, a private DNS zone will be created, and users should edit the /etc/hosts file for resolution. Otherwise, a public DNS zone will be created based on the given domain.
+    default: false
+
+  use_existing_zone:
+    type: boolean
+    title: Use Existing DNS Zone name
+    description: If the switch is enabled, an existing DNS zone will be used instead of creating a new one.
     default: false
 
   zone_dns:
