--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -92,29 +92,36 @@ jobs:
           fi
 
       - name: Create RMS Stack
-        uses: oracle-actions/run-oci-cli-command@v1.3.1
+        uses: oracle-actions/run-oci-cli-command@v1.3.2
         id: create-stack
         with:
           command: 'resource-manager stack create --compartment-id ${{ env.COMPARTMENT_OCID }} --display-name ${{ github.job }}-${{ env.NOW }} --config-source infrastructure.zip --variables "{\"compartment_ocid\": \"${{ env.COMPARTMENT_OCID }}\", \"cluster_name\": \"${{ env.CLUSTER_NAME }}-${{ env.NOW }}\", \"control_plane_shape\": \"BM.Standard3.64\", \"control_plane_ocpu\": \"64\", \"control_plane_memory\": \"1024\", \"compute_shape\": \"BM.Standard3.64\", \"compute_ocpu\": \"64\", \"compute_memory\": \"1024\", \"openshift_image_source_uri\": \"${{ env.OPENSHIFT_IMAGE_SOURCE_URI }}\", \"region\": \"${{ env.OCI_CLI_REGION }}\", \"tenancy_ocid\": \"${{ env.OCI_CLI_TENANCY }}\", \"zone_dns\": \"${{ env.CLUSTER_NAME }}-${{ env.NOW }}${{ env.ZONE_DNS_SUFFIX }}\"}"'
           query: 'data.id'
 
       - name: RMS Stack Plan Job
-        uses: oracle-actions/run-oci-cli-command@v1.3.1
+        uses: oracle-actions/run-oci-cli-command@v1.3.2
         id: stack-plan-job
         with:
           command: 'resource-manager job create-plan-job --wait-for-state SUCCEEDED --stack-id ${{ steps.create-stack.outputs.raw_output }}'
 
       - name: RMS Stack Apply Job
-        uses: oracle-actions/run-oci-cli-command@v1.3.1
+        uses: oracle-actions/run-oci-cli-command@v1.3.2
         id: stack-apply-job
         with:
           command: 'resource-manager job create-apply-job --wait-for-state SUCCEEDED --max-wait-seconds 2400 --execution-plan-strategy AUTO_APPROVED --stack-id ${{ steps.create-stack.outputs.raw_output }}'
       
       - name: Teardown BM Infrastructure
-        uses: oracle-actions/run-oci-cli-command@v1.3.1
+        uses: oracle-actions/run-oci-cli-command@v1.3.2
         id: teardown-bm-infra
         with:
           command: 'resource-manager job create-destroy-job --wait-for-state SUCCEEDED --max-wait-seconds 2400 --execution-plan-strategy AUTO_APPROVED --stack-id ${{ steps.create-stack.outputs.raw_output }}'
+
+      - name: Destroy RMS Stack
+        uses: oracle-actions/run-oci-cli-command@v1.3.2
+        id: destroy-stack
+        with:
+          command: 'resource-manager stack delete --force --stack-id ${{ steps.create-stack.outputs.raw_output }}'
+  
 
   smoke-test-vm-multi-ad:
     needs: [smoke-test-bm]
@@ -150,26 +157,32 @@ jobs:
           fi
 
       - name: Create RMS Stack
-        uses: oracle-actions/run-oci-cli-command@v1.3.1
+        uses: oracle-actions/run-oci-cli-command@v1.3.2
         id: create-stack
         with:
           command: 'resource-manager stack create --compartment-id ${{ env.COMPARTMENT_OCID }} --display-name ${{ github.job }}-${{ env.NOW }} --config-source infrastructure.zip --variables "{\"compartment_ocid\": \"${{ env.COMPARTMENT_OCID }}\", \"cluster_name\": \"${{ env.CLUSTER_NAME }}-${{ env.NOW }}\", \"openshift_image_source_uri\": \"${{ env.OPENSHIFT_IMAGE_SOURCE_URI }}\", \"region\": \"${{ env.MUTLI_AD_REGION }}\", \"tenancy_ocid\": \"${{ env.OCI_CLI_TENANCY }}\", \"zone_dns\": \"${{ env.CLUSTER_NAME }}-${{ env.NOW }}${{ env.ZONE_DNS_SUFFIX }}\"}"'
           query: 'data.id'
 
       - name: RMS Stack Plan Job
-        uses: oracle-actions/run-oci-cli-command@v1.3.1
+        uses: oracle-actions/run-oci-cli-command@v1.3.2
         id: stack-plan-job
         with:
           command: 'resource-manager job create-plan-job --wait-for-state SUCCEEDED --stack-id ${{ steps.create-stack.outputs.raw_output }}'
 
       - name: RMS Stack Apply Job
-        uses: oracle-actions/run-oci-cli-command@v1.3.1
+        uses: oracle-actions/run-oci-cli-command@v1.3.2
         id: stack-apply-job
         with:
           command: 'resource-manager job create-apply-job --wait-for-state SUCCEEDED --max-wait-seconds 2400 --execution-plan-strategy AUTO_APPROVED --stack-id ${{ steps.create-stack.outputs.raw_output }}'
 
       - name: Teardown VM Multi AD Infrastructure
-        uses: oracle-actions/run-oci-cli-command@v1.3.1
+        uses: oracle-actions/run-oci-cli-command@v1.3.2
         id: teardown-vm-multi-ad-infra
         with:
           command: 'resource-manager job create-destroy-job --wait-for-state SUCCEEDED --max-wait-seconds 2400 --execution-plan-strategy AUTO_APPROVED --stack-id ${{ steps.create-stack.outputs.raw_output }}'
+
+      - name: Destroy RMS Stack
+        uses: oracle-actions/run-oci-cli-command@v1.3.2
+        id: destroy-stack
+        with:
+          command: 'resource-manager stack delete --force --stack-id ${{ steps.create-stack.outputs.raw_output }}'
