--- a/custom_manifests/manifests/02-machineconfig-csi.yml
+++ b/custom_manifests/manifests/02-machineconfig-csi.yml
@@ -1,3 +1,4 @@
+# ----- 02-machineconfig-csi.yml -----
 
 # 99_openshift-machineconfig_00-master-iscsi-service.yaml
 apiVersion: machineconfiguration.openshift.io/v1
