--- a/custom_manifests/oci-ccm-csi-drivers/v1.30-rwx/oci-csi.yml
+++ b/custom_manifests/oci-ccm-csi-drivers/v1.30-rwx/oci-csi.yml
@@ -116,7 +116,7 @@ spec:
             - --fss-csi-endpoint=unix://var/run/shared-tmpfs/csi-fss.sock
           command:
             - /usr/local/bin/oci-csi-controller-driver
-          image: ghcr.io/oracle/cloud-provider-oci:v1.30.0
+          image: ghcr.io/dfoster-oracle/cloud-provider-oci-amd64:3f14cecd-dirty
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - name: config
@@ -284,7 +284,7 @@ spec:
                   fieldPath: spec.nodeName
             - name: PATH
               value: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/host/usr/bin:/host/sbin
-          image: ghcr.io/oracle/cloud-provider-oci:v1.30.0
+          image: ghcr.io/dfoster-oracle/cloud-provider-oci-amd64:3f14cecd-dirty
           securityContext:
             privileged: true
           volumeMounts:
