fixe oci-csi secret name

--- a/edge/c3/custom_manifests_c3/manifests/oci-csi.yml
+++ b/edge/c3/custom_manifests_c3/manifests/oci-csi.yml
@@ -25,7 +25,7 @@ metadata:
   name: oci-volume-provisioner
   namespace: oci-csi
 stringData:
-  cloud-provider.yaml: |
+  config.yaml: |
     useInstancePrincipals: true
     compartment: $COMPARTMENT_ID
     vcn: $OCP_VCN_ID
