--- a/custom_manifests/condensed-manifest.yml
+++ b/custom_manifests/condensed-manifest.yml
@@ -791,7 +791,7 @@ stringData:
       subnet1: $OCP_SUBNET_ID
       securityListManagementMode: Frontend
       securityLists:
-        $OCP_SUBNET_ID: $OPC_SEC_LIST_ID
+        $OCP_SUBNET_ID: $OCP_SEC_LIST_ID
     rateLimiter:
       rateLimitQPSRead: 20.0
       rateLimitBucketRead: 5
@@ -816,7 +816,7 @@ stringData:
       subnet1: $OCP_SUBNET_ID
       securityListManagementMode: Frontend
       securityLists:
-        $OCP_SUBNET_ID: $OPC_SEC_LIST_ID
+        $OCP_SUBNET_ID: $OCP_SEC_LIST_ID
     rateLimiter:
       rateLimitQPSRead: 20.0
       rateLimitBucketRead: 5
