Pull request #58: [OSO-467] - update manifests for rwx-uhp and add driver version selection to stack

--- a/custom_manifests/oci-ccm-csi-drivers/v1.30.0-RWX-LA/01-oci-ccm.yml
+++ b/custom_manifests/oci-ccm-csi-drivers/v1.30.0-RWX-LA/01-oci-ccm.yml
@@ -238,7 +238,7 @@ spec:
             path: /etc/kubernetes
       containers:
         - name: oci-cloud-controller-manager
-          image: ghcr.io/dfoster-oracle/cloud-provider-oci-amd64:v1.30.0-rwx
+          image: ghcr.io/dfoster-oracle/cloud-provider-oci-amd64:v1.30.0-rwx-uhp
           command:
             - /bin/bash
             - -c
