--- a/custom_manifests/manifests/01-oci-csi.yml
+++ b/custom_manifests/manifests/01-oci-csi.yml
@@ -494,6 +494,8 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: oci-bv
+  annotations:
+    storageclass.kubernetes.io/is-default-class: "true"
 provisioner: blockvolume.csi.oraclecloud.com
 volumeBindingMode: WaitForFirstConsumer
 allowVolumeExpansion: true
