--- a/custom_manifests/condensed-manifest.yml
+++ b/custom_manifests/condensed-manifest.yml
@@ -753,6 +753,8 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: oci-bv
+  annotations:
+    storageclass.kubernetes.io/is-default-class: "true"
 provisioner: blockvolume.csi.oraclecloud.com
 volumeBindingMode: WaitForFirstConsumer
 allowVolumeExpansion: true
@@ -791,7 +793,7 @@ stringData:
       subnet1: $OCP_SUBNET_ID
       securityListManagementMode: Frontend
       securityLists:
-        $OCP_SUBNET_ID: $OPC_SEC_LIST_ID
+        $OCP_SUBNET_ID: $OCP_SEC_LIST_ID
     rateLimiter:
       rateLimitQPSRead: 20.0
       rateLimitBucketRead: 5
@@ -816,7 +818,7 @@ stringData:
       subnet1: $OCP_SUBNET_ID
       securityListManagementMode: Frontend
       securityLists:
-        $OCP_SUBNET_ID: $OPC_SEC_LIST_ID
+        $OCP_SUBNET_ID: $OCP_SEC_LIST_ID
     rateLimiter:
       rateLimitQPSRead: 20.0
       rateLimitBucketRead: 5
