Pull request #70: [OSO-499] RWX GA - default to latest CSI driver v1.32.0
Merge in OSO/openshift-terraform-stack from davidfos/rwx-GA to dev-v1.4.0

Squashed commit of the following:

commit 9df4ec1c6c9d462e141dbecea2a94050cac99d92
Author: davidfos <david.d.foster@oracle.com>
Date:   Wed Jul 16 16:41:38 2025 -0700

    more clarity

commit 23007efe9009fcab17ec45e380e688521a679b18
Author: davidfos <david.d.foster@oracle.com>
Date:   Wed Jul 16 16:40:35 2025 -0700

    clarify upgrading drivers section

commit 9988fdec43ea24941ff831d4b31920227bfc3ba9
Author: davidfos <david.d.foster@oracle.com>
Date:   Wed Jul 16 16:15:14 2025 -0700

    policy to allow cluster use of openshift-tags

commit 7b025ec050d38972834c6a8dad4a858a862abb4c
Author: davidfos <david.d.foster@oracle.com>
Date:   Wed Jul 16 15:04:40 2025 -0700

    comments

commit dcc8db088275f68e3b12313db4f3c53cceee581a
Author: davidfos <david.d.foster@oracle.com>
Date:   Tue Jul 15 14:01:26 2025 -0700

    set default openshift-tags compartment to root in add-nodes to match create-cluster

commit f200ed7ade3c738b83af596bb4d59a146b1d450e
Author: davidfos <david.d.foster@oracle.com>
Date:   Tue Jul 15 14:01:11 2025 -0700

    initialDefinedTags for LBs and BVs created by CCM and CSI

commit c3b0e5c24a079ecb6f47526e925016c103198384
Author: davidfos <david.d.foster@oracle.com>
Date:   Tue Jul 15 14:01:00 2025 -0700

    make CSI driver v1.32.0 the default

--- a/custom_manifests/oci-ccm-csi-drivers/v1.32.0/01-oci-driver-configs.yml
+++ b/custom_manifests/oci-ccm-csi-drivers/v1.32.0/01-oci-driver-configs.yml
@@ -22,18 +22,10 @@ stringData:
       rateLimitBucketRead: 5
       rateLimitQPSWrite: 20.0
       rateLimitBucketWrite: 5
-    tags:
-      loadBalancer:
-        defined:
-          openshift-tags:
-            openshift-resource: openshift-resource-infra
-      blockVolume:
-        defined:
-          openshift-tags:
-            openshift-resource: openshift-resource-infra
 
 ---
 
+# oci-csi-01-config.yaml
 # TODO - configure before use
 apiVersion: v1
 kind: Secret
@@ -56,14 +48,5 @@ stringData:
       rateLimitBucketRead: 5
       rateLimitQPSWrite: 20.0
       rateLimitBucketWrite: 5
-    tags:
-      loadBalancer:
-        defined:
-          openshift-tags:
-            openshift-resource: openshift-resource-infra
-      blockVolume:
-        defined:
-          openshift-tags:
-            openshift-resource: openshift-resource-infra
 
 ---
