Pull request #73: [OSO-509] virtualization GA with UHP-LA CSI driver
Merge in OSO/openshift-terraform-stack from davidfos/virt-GA to dev-v1.4.0

Squashed commit of the following:

commit c3dc99a93fb910235cd9e070128428f52b229950
Author: davidfos <david.d.foster@oracle.com>
Date:   Fri Jul 18 09:32:32 2025 -0700

    virtualization GA with UHP-LA CSI driver

--- a/custom_manifests/oci-ccm-csi-drivers/v1.30.0/01-oci-driver-configs.yml
+++ b/custom_manifests/oci-ccm-csi-drivers/v1.30.0/01-oci-driver-configs.yml
@@ -22,6 +22,15 @@ stringData:
       rateLimitBucketRead: 5
       rateLimitQPSWrite: 20.0
       rateLimitBucketWrite: 5
+    tags:
+      loadBalancer:
+        defined:
+          openshift-tags:
+            openshift-resource: openshift-resource-infra
+      blockVolume:
+        defined:
+          openshift-tags:
+            openshift-resource: openshift-resource-infra
 
 ---
 
@@ -48,5 +57,14 @@ stringData:
       rateLimitBucketRead: 5
       rateLimitQPSWrite: 20.0
       rateLimitBucketWrite: 5
+    tags:
+      loadBalancer:
+        defined:
+          openshift-tags:
+            openshift-resource: openshift-resource-infra
+      blockVolume:
+        defined:
+          openshift-tags:
+            openshift-resource: openshift-resource-infra
 
 ---
