--- a/custom_manifests/oci-ccm-csi-drivers/v1.32.0-UHP/01-oci-ccm.yml
+++ b/custom_manifests/oci-ccm-csi-drivers/v1.32.0-UHP/01-oci-ccm.yml
@@ -13,7 +13,7 @@ metadata:
     "pod-security.kubernetes.io/warn": "privileged"
     "security.openshift.io/scc.podSecurityLabelSync": "false"
     "openshift.io/run-level": "0"
-    "pod-security.kubernetes.io/enforce-version": "v1.30"
+    "pod-security.kubernetes.io/enforce-version": "v1.32"
 
 ---
 
@@ -238,7 +238,7 @@ spec:
             path: /etc/kubernetes
       containers:
         - name: oci-cloud-controller-manager
-          image: ghcr.io/dfoster-oracle/cloud-provider-oci-amd64:v1.30.0-rwx-uhp
+          image: ghcr.io/dfoster-oracle/cloud-provider-oci-amd64:v1.32.0-UHP-LA
           command:
             - /bin/bash
             - -c
