--- a/custom_manifests/oci-ccm-csi-drivers/v1.32.0/01-oci-driver-configs.yml
+++ b/custom_manifests/oci-ccm-csi-drivers/v1.32.0/01-oci-driver-configs.yml
@@ -22,6 +22,15 @@ stringData:
       rateLimitBucketRead: 5
       rateLimitQPSWrite: 20.0
       rateLimitBucketWrite: 5
+    tags:
+      loadBalancer:
+        defined:
+          openshift-tags:
+            openshift-resource: openshift-resource-infra
+      blockVolume:
+        defined:
+          openshift-tags:
+            openshift-resource: openshift-resource-infra
 
 ---
 
@@ -48,5 +57,14 @@ stringData:
       rateLimitBucketRead: 5
       rateLimitQPSWrite: 20.0
       rateLimitBucketWrite: 5
+    tags:
+      loadBalancer:
+        defined:
+          openshift-tags:
+            openshift-resource: openshift-resource-infra
+      blockVolume:
+        defined:
+          openshift-tags:
+            openshift-resource: openshift-resource-infra
 
 ---
