Pull request #72: [OSO-510] allow add worker node traffic on port 22624 to go through API LB
Merge in OSO/openshift-terraform-stack from davidfos/api-LB-backend-adding-nodes to dev-v1.4.0

Squashed commit of the following:

commit 3d5df8cf0c085d34517762c9a83ed03f46b950c6
Author: davidfos <david.d.foster@oracle.com>
Date:   Wed Jul 23 13:23:06 2025 -0700

    normalize backendset names

commit dd70d9f9f665a4c5a9569d88f9a0009cd811f80e
Author: davidfos <david.d.foster@oracle.com>
Date:   Fri Jul 18 08:56:17 2025 -0700

    remove reference to condensed manifest

commit 7a44b4a1c716b8612b7a75608e7c0803d4da9095
Author: davidfos <david.d.foster@oracle.com>
Date:   Fri Jul 18 08:49:34 2025 -0700

    split load balancer in readme -- last instance of OPC removed

commit f260e03eb4386ca4a1902398ba3f1a2ad23dcd37
Author: davidfos <david.d.foster@oracle.com>
Date:   Mon Jul 14 16:53:00 2025 -0700

    add rule to cluster LB NSG to allow 22624 traffic originating from NAT Gateway IP

commit d8442a95d518ee9f013756943565b0c01716e25c
Author: davidfos <david.d.foster@oracle.com>
Date:   Mon Jul 14 16:51:45 2025 -0700

    allow add worker node traffic on port 22624 to go through api LB

--- a/custom_manifests/oci-ccm-csi-drivers/v1.30.0/01-oci-driver-configs.yml
+++ b/custom_manifests/oci-ccm-csi-drivers/v1.30.0/01-oci-driver-configs.yml
@@ -16,7 +16,7 @@ stringData:
       subnet1: $OCP_SUBNET_ID
       securityListManagementMode: Frontend
       securityLists:
-        $OCP_SUBNET_ID: $OPC_SEC_LIST_ID
+        $OCP_SUBNET_ID: $OCP_SEC_LIST_ID
     rateLimiter:
       rateLimitQPSRead: 20.0
       rateLimitBucketRead: 5
@@ -51,7 +51,7 @@ stringData:
       subnet1: $OCP_SUBNET_ID
       securityListManagementMode: Frontend
       securityLists:
-        $OCP_SUBNET_ID: $OPC_SEC_LIST_ID
+        $OCP_SUBNET_ID: $OCP_SEC_LIST_ID
     rateLimiter:
       rateLimitQPSRead: 20.0
       rateLimitBucketRead: 5
