--- a/custom_manifests/oci-ccm-csi-drivers/v1.32.0-UHP/01-oci-csi.yml
+++ b/custom_manifests/oci-ccm-csi-drivers/v1.32.0-UHP/01-oci-csi.yml
@@ -532,17 +532,17 @@ reclaimPolicy: Delete
 
 ---
 
-# https://github.com/oracle/oci-cloud-controller-manager/blob/master/docs/volume-snapshot-and-restore-using-csi.md
-apiVersion: snapshot.storage.k8s.io/v1
-kind: VolumeSnapshotClass
-metadata:
-  name: oci-snapshot
-  annotations:
-    snapshot.storage.kubernetes.io/is-default-class: "true"
-driver: blockvolume.csi.oraclecloud.com
-parameters:
-  backupType: full
-deletionPolicy: Delete
+# # https://github.com/oracle/oci-cloud-controller-manager/blob/master/docs/volume-snapshot-and-restore-using-csi.md
+# apiVersion: snapshot.storage.k8s.io/v1
+# kind: VolumeSnapshotClass
+# metadata:
+#   name: oci-snapshot
+#   annotations:
+#     snapshot.storage.kubernetes.io/is-default-class: "true"
+# driver: blockvolume.csi.oraclecloud.com
+# parameters:
+#   backupType: full
+# deletionPolicy: Delete
 
 ---
 
