--- a/custom_manifests/manifests/01-oci-csi.yml
+++ b/custom_manifests/manifests/01-oci-csi.yml
@@ -13,7 +13,7 @@ metadata:
     "pod-security.kubernetes.io/warn": "privileged"
     "security.openshift.io/scc.podSecurityLabelSync": "false"
     "openshift.io/run-level": "0"
-    "pod-security.kubernetes.io/enforce-version": "v1.30"
+    "pod-security.kubernetes.io/enforce-version": "v1.32"
 
 ---
 
@@ -116,7 +116,7 @@ spec:
             - --fss-csi-endpoint=unix://var/run/shared-tmpfs/csi-fss.sock
           command:
             - /usr/local/bin/oci-csi-controller-driver
-          image: ghcr.io/oracle/cloud-provider-oci:v1.30.0
+          image: ghcr.io/oracle/cloud-provider-oci:v1.32.0
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - name: config
@@ -265,7 +265,7 @@ spec:
         role: csi-oci
     spec:
       nodeSelector:
-        node-role.kubernetes.io/worker: ""
+        node-role.kubernetes.io/worker: "" # this is not present in https://github.com/oracle/oci-cloud-controller-manager/blob/master/manifests/container-storage-interface/oci-csi-node-driver.yaml
       containers:
         - name: oci-csi-node-driver
           args:
@@ -284,7 +284,7 @@ spec:
                   fieldPath: spec.nodeName
             - name: PATH
               value: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/host/usr/bin:/host/sbin
-          image: ghcr.io/oracle/cloud-provider-oci:v1.30.0
+          image: ghcr.io/oracle/cloud-provider-oci:v1.32.0
           securityContext:
             privileged: true
           volumeMounts:
@@ -497,9 +497,9 @@ metadata:
   annotations:
     storageclass.kubernetes.io/is-default-class: "true"
 provisioner: blockvolume.csi.oraclecloud.com
-volumeBindingMode: WaitForFirstConsumer
-allowVolumeExpansion: true
 reclaimPolicy: Delete
+allowVolumeExpansion: true
+volumeBindingMode: WaitForFirstConsumer
 
 ---
 
@@ -509,10 +509,43 @@ kind: StorageClass
 metadata:
   name: oci-bv-encrypted
 provisioner: blockvolume.csi.oraclecloud.com
+reclaimPolicy: Delete
+allowVolumeExpansion: true
+volumeBindingMode: WaitForFirstConsumer
 parameters:
   attachment-type: "paravirtualized"
-reclaimPolicy: Delete
-volumeBindingMode: WaitForFirstConsumer
-allowVolumeExpansion: true
+
+---
+
+# # https://github.com/oracle/oci-cloud-controller-manager/blob/master/docs/volume-snapshot-and-restore-using-csi.md
+# apiVersion: snapshot.storage.k8s.io/v1
+# kind: VolumeSnapshotClass
+# metadata:
+#   name: oci-snapshot
+#   annotations:
+#     snapshot.storage.kubernetes.io/is-default-class: "true"
+# driver: blockvolume.csi.oraclecloud.com
+# parameters:
+#   backupType: full
+# deletionPolicy: Delete
+
+---
+
+# # https://docs.oracle.com/en-us/iaas/Content/ContEng/Tasks/contengcreatingpersistentvolumeclaim_Provisioning_PVCs_on_FSS.htm#contengcreatingpersistentvolumeclaim_topic-Provisioning_PVCs_on_FSS-Using-CSI-Volume-Plugin
+# kind: StorageClass
+# apiVersion: storage.k8s.io/v1
+# metadata:
+#   name: oci-dyn-fss
+# provisioner: fss.csi.oraclecloud.com
+# parameters:
+#   availabilityDomain: <ad-name> # Required
+#   mountTargetOcid: <mt-ocid> | mountTargetSubnetOcid: <mt-subnet-ocid>
+#   compartmentOcid: <compartment-ocid>
+#   kmsKeyOcid: <key-ocid>
+#   exportPath: <path>
+#   exportOptions: "[{<options-in-json-format>}]"
+#   encryptInTransit: "false"
+#   oci.oraclecloud.com/initial-defined-tags-override: '{"<tag-namespace>": {"<tag-key>": "<tag-value>"}}'
+#   oci.oraclecloud.com/initial-freeform-tags-override: '{"<tag-key>": "<tag-value>"}'
 
 ---
